@@ -1,3 +1,7 @@
+5/4/2002
+	- added the 'sleep' and 'date' commands to the update client.
+	  (Olafur Gudmundsson <ogud@ogud.com>)
+
 4/29/2002
 	- 1.2.4 released
 
